Add support for HEAP_DUMP_GZ file type and update related UI components